@@ -39,16 +39,16 @@ data:extend({
     corpse = "small-remnants",
     dying_explosion = "storage-tank-explosion",
     resistances = data.raw["pipe"]["pipe"].resistances,
-    collision_box = { { -0.77, -0.45 }, { 0.77, 0.45 } },
-    selection_box = { { -1.2, -0.6 }, { 1.2, 0.6 } },
+    collision_box = { { -0.79, -0.49 }, { 0.79, 0.49 } },
+    selection_box = { { -1, -0.5 }, { 1, 0.5 } },
     fluid_box = {
       base_area = BASE_AREA / 4,
       height = HEIGHT,
       base_level = 0,
       pipe_covers = nil,
       pipe_connections = {
-        { position = { -0, -1.1 } },
-        { position = { 0, 1.1 } },
+        { position = { -0, -1 } },
+        { position = { 0, 1 } },
       },
       hide_connection_info = true,
     },
@@ -236,16 +236,16 @@ data:extend({
     corpse = "small-remnants",
     dying_explosion = "storage-tank-explosion",
     resistances = data.raw["pipe"]["pipe"].resistances,
-    collision_box = { { -0.77, -0.95 }, { 0.77, 0.95 } },
-    selection_box = { { -1.1, -1.1 }, { 1.1, 1.1 } },
+    collision_box = { { -0.79, -0.99 }, { 0.79, 0.99 } },
+    selection_box = { { -1, -1 }, { 1, 1 } },
     fluid_box = {
       base_area = BASE_AREA / 2,
       height = HEIGHT,
       base_level = 0,
       pipe_covers = nil,
       pipe_connections = {
-        { position = { 0, -1.6 } },
-        { position = { 0, 1.6 } },
+        { position = { 0, -1.5 } },
+        { position = { 0, 1.5 } },
       },
       hide_connection_info = true,
     },
@@ -417,16 +417,16 @@ data:extend({
     corpse = "small-remnants",
     dying_explosion = "storage-tank-explosion",
     resistances = data.raw["pipe"]["pipe"].resistances,
-    collision_box = { { -0.77, -1.95 }, { 0.77, 1.95 } },
-    selection_box = { { -1.1, -2.2 }, { 1.1, 2.2 } },
+    collision_box = { { -0.79, -1.99 }, { 0.79, 1.99 } },
+    selection_box = { { -1, -2 }, { 1, 2 } },
     fluid_box = {
       base_area = BASE_AREA,
       height = HEIGHT,
       base_level = 0,
       pipe_covers = nil,
       pipe_connections = {
-        { position = { 0, -2.6 } },
-        { position = { 0, 2.6 } },
+        { position = { 0, -2.5 } },
+        { position = { 0, 2.5 } },
       },
       hide_connection_info = true,
     },
@@ -598,17 +598,17 @@ data:extend({
     corpse = "small-remnants",
     dying_explosion = "storage-tank-explosion",
     resistances = data.raw["pipe"]["pipe"].resistances,
-    collision_box = { { -0.8, -0.9 }, { 0.8, 0.7 } },
-    selection_box = { { -1.1, -1.1 }, { 1.1, 1.1 } },
+    collision_box = { { -0.99, -0.99 }, { 0.99, 0.79 } },
+    selection_box = { { -1, -1 }, { 1, 1 } },
     fluid_box = {
       base_area = BASE_AREA / 2,
       height = HEIGHT,
       base_level = 0,
       pipe_covers = nil,
       pipe_connections = {
-        { position = { 0, -1.6 } },
-        { position = { 1.6, 0 } },
-        { position = { -1.6, 0 } },
+        { position = { 0, -1.5 } },
+        { position = { 1.5, 0 } },
+        { position = { -1.5, 0 } },
       },
       hide_connection_info = true,
     },
@@ -780,16 +780,16 @@ data:extend({
     corpse = "small-remnants",
     dying_explosion = "storage-tank-explosion",
     resistances = data.raw["pipe"]["pipe"].resistances,
-    collision_box = { { -0.9, -0.9 }, { 0.75, 0.75 } },
-    selection_box = { { -1.1, -1.1 }, { 1.1, 1.1 } },
+    collision_box = { { -0.99, -0.99 }, { 0.79, 0.79 } },
+    selection_box = { { -1, -1 }, { 1, 1 } },
     fluid_box = {
       base_area = BASE_AREA / 4,
       height = HEIGHT,
       base_level = 0,
       pipe_covers = nil,
       pipe_connections = {
-        { position = { 0, -1.6 } },
-        { position = { -1.6, 0 } },
+        { position = { 0, -1.5 } },
+        { position = { -1.5, 0 } },
       },
       hide_connection_info = true,
     },
@@ -961,18 +961,18 @@ data:extend({
     corpse = "small-remnants",
     dying_explosion = "storage-tank-explosion",
     resistances = data.raw["pipe"]["pipe"].resistances,
-    collision_box = { { -0.85, -0.85 }, { 0.85, 0.85 } },
-    selection_box = { { -1.1, -1.1 }, { 1.1, 1.1 } },
+    collision_box = { { -0.99, -0.99 }, { 0.99, 0.99 } },
+    selection_box = { { -1, -1 }, { 1, 1 } },
     fluid_box = {
       base_area = BASE_AREA,
       height = HEIGHT,
       base_level = 0,
       pipe_covers = nil,
       pipe_connections = {
-        { position = { 0, -1.6 } },
-        { position = { 0, 1.6 } },
-        { position = { 1.6, 0 } },
-        { position = { -1.6, 0 } },
+        { position = { 0, -1.5 } },
+        { position = { 0, 1.5 } },
+        { position = { 1.5, 0 } },
+        { position = { -1.5, 0 } },
       },
       hide_connection_info = true,
     },
@@ -1143,17 +1143,17 @@ data:extend({
     max_health = 800,
     corpse = "small-remnants",
     resistances = data.raw["pipe"]["pipe"].resistances,
-    collision_box = { { -0.80, -0.95 }, { 0.63, 0.85 } },
-    selection_box = { { -1.0, -1.2 }, { 1.1, 0.9 } },
+    collision_box = { { -0.79, -0.79 }, { 0.79, 0.7 } },
+    selection_box = { { -1.0, -1.0 }, { 1.0, 1.0 } },
     fluid_box = {
       base_area = BASE_AREA / 4,
       height = HEIGHT,
       base_level = 0,
       pipe_covers = nil,
       pipe_connections = {
-        { position = { 0, -1.6 } },
+        { position = { 0, -1.5 } },
         {
-          position = { 0, 0.9 },
+          position = { 0, 1 },
           max_underground_distance = settings.startup["fmf-underground-duct-max-length"].value + 3, -- we shifted the positioning a bit so as not to collide with the 1 underground distance we use for 'regular' connections
         },
       },
