@@ -136,7 +136,7 @@ simulations.endpoints = {
   init = [[
     game.camera_alt_info = true
     game.surfaces[1].create_entities_from_blueprint_string({
-      string = "0eNq9lsFymzAQht9FZ8ggEMH2oS/SyTACFqIpSIwk0roe3r0rnBK7Fo3sQ7gwQsu3C79+aU+k6icYtZCWHE5E1Eoacvh+IkZ0kvfumT2OQA5EWBhIRCQf3KiZahubgfc9mSMiZAO/yIHOLxEBaYUVcKYsg2Mpp6ECjQHr+9BDbbWoY5Cgu2OM+UG3vAZMMSqDBCVdcqTGu4gc8UYTzFRNbQu6NOI3UmiyXnN0kyxdk5mpMpYvyE36DuESRPdaqUm74rMXDzMLYtJkg5n6mGxlCtkKiVPxKEbPj6DpU34G50/57CHlK8kBYqviTqtJNv9DMT/qObQolOUvKkNUtMaXBqwVsjMu8J31k6PKjgG6xoS8g2VN4MrCJ9xO2o2RNqjGhXMb98CNJb4Ki+CPjffXFTZC4+Jb5p894F04ON8Epx7w/grswbFLnAfg1tWF/zyE7P39z4uh9NrLvZLdLTAJ56UhPBbOy655KABuFBtCFF6sT1zKHvAI/Vdd5iPnn8j7wUs25H3AdMmXeo4+YLokxHN0F+qNrX+3v9+1SYhp02vP4XnVxKPC48odWfwHbJqQBrDv8GAI7g4LhuDudyD9XOmU3UF1m1RgsfmWTGqyfp2oX6eIYA9kterLCl75m1DaxddC15OwJc41K6QV2tjyplNq+0k0H63S2YDzwsWWwTVarEgSNx5GjhZ0Gcg3NJxrn5Y263DRlUXkDbQ517ajrNinBdvnrMizef4DWc0xtg==",
+      string = "0eNq9lsFymzAQht9FZ8ggEMH2oS/SyTACFqIpSIwk0roe3r0rnBK7Fo3sQ7gwQsu3C79+aU+k6icYtZCWHE5E1Eoacvh+IkZ0kvfumT2OQA5EWBhIRCQf3KiZahubgfc9mSMiZAO/yIHOLxEBaYUVcKYsg2Mpp6ECjQHr+9BDbbWoY5Cgu2OM+UG3vAZMMSqDBCVdcqTGu4gc8UYTzFRNbQu6NOI3UmiyXnN0kyxdk5mpMpYvyE36DuESRPdaqUm74rMXDzMLYtJkg5n6mGxlCtkKiVPxKEbPj6DpU34G50/57CHlK8kBYqviTqtJNv9DMT/qObQolOUvKkNUtMaXBqwVsjMu8J31.5PKjgG6xoS8g2VN4MrCJ9xO2o2RNqjGhXMb98CNJb4Ki+CPjffXFTZC4+Jb5p894F04ON8Epx7w/grswbFLnAfg1tWF/zyE7P39z4uh9NrLvZLdLTAJ56UhPBbOy655KABuFBtCFF6sT1zKHvAI/Vdd5iPnn8j7wUs25H3AdMmXeo4+YLokxHN0F+qNrX+3v9+1SYhp02vP4XnVxKPC48odWfwHbJqQBrDv8GAI7g4LhuDudyD9XOmU3UF1m1RgsfmWTGqyfp2oX6eIYA9kterLCl75m1DaxddC15OwJc41.5QV2tjyplNq+0k0H63S2YDzwsWWwTVarEgSNx5GjhZ0Gcg3NJxrn5Y263DRlUXkDbQ517ajrNinBdvnrMizef4DWc0xtg==",
       position = { 0, -4 },
     })
 
