@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.4
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed messy duct collision boxes causing buildability issues (#14)
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.3
 Date: 2023-05-08
